[project]
name = "step-audio-editx"
version = "0.1.0"
description = "Step-Audio-EditX: A powerful 3B parameters LLM-based audio model specialized in expressive and iterative audio editing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "transformers==4.53.3",
    "accelerate==1.3.0",
    "openai-whisper==20240930",
    "onnxruntime-gpu==1.17.0; sys_platform != 'darwin'",
    "onnxruntime",
    "omegaconf==2.3.0",
    "librosa==0.10.2.post1",
    "sox==1.5.0",
    "modelscope",
    "numpy==1.26.4",
    "six==1.16.0",
    "hyperpyyaml",
    "conformer==0.3.2",
    "diffusers",
    "pillow",
    "sentencepiece",
    "funasr>=1.1.3",
    "protobuf==5.29.3",
    "gradio>=5.16.0",
    "nvidia-cuda-nvrtc-cu12==12.8.93; sys_platform != 'darwin'",
    "spaces==0.42.1",
    "matplotlib==3.10.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "funasr_detach", "stepvocoder"]
include = [
    "*.py",
    "config/**/*.py",
    "funasr_detach/**/*.py",
    "stepvocoder/**/*.py",
]

[dependency-groups]
dev = []

[tool.uv]